--- a/001-小组作业项目清单.MD
+++ b/001-小组作业项目清单.MD
@@ -12,3 +12,6 @@
 * 项目地址：https://github.com/yps12345/nothing-is-impossible
 * 项目说明：nothing is impossible.我们组准备完成一个IAT范式的编程任务（Greenwald,McGhee,1998,[Experiment 1]）
    
+# 闪电组：（小组成员：雷乐田，陈芯瑜，李燕玲，王语清，张珉善，李太焕）
+* 项目地址：https://github.com/llllle/lightning.git
+* 项目说明：我们是和闪电一样快的树懒。我们组想做的是注意网络测验（ANT）（Jin Fan et al., 2002）。
